--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -31,6 +31,9 @@
   effect:
     - effect_ability_damage_amplify_10_percent_weight_100kg
 - id: mark_ability_jianqiang
+  config: *ablitity_config
+  effect:
+    - effect_ability_physical_damage_reduction_below_25_percent #TODO
 - id: mark_ability_liushui
 - id: mark_ability_duyao
 - id: mark_ability_kongqi
