--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -111,3 +111,25 @@
     statType: weight
     delta: 10
     percent: 0
+- id: effect_emblem_decrease_liuxue_duration_1
+  trigger: OnBeforeAddMark
+  priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfBeAddMark
+      - type: evaluate
+        target:
+          base: addMarkContext
+          chain:
+            - type: select
+              arg:
+                type: dynamic
+                arg: baseMark.id
+        evaluator:
+          type: same
+          value: mark_liuxue
+  apply: #TODO:增量而不是设置
+    type: setMarkDuration
+    target: addMarkContext
+    value: 2
