--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -34,7 +34,7 @@
 - id: mark_emblem_shupi
   config: *emblem_config
   effect:
-    - effect_emblem_decrease_liuxue_duration_1 #TODO
+    - effect_emblem_decrease_liuxue_duration_1
 - id: mark_emblem_shiming
 - id: mark_emblem_duyao
 - id: mark_emblem_zhixi
