--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -477,7 +477,27 @@
   effect:
     - effect_mark_reflect_damage
 - id: mark_mianyiruohua
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_immune_stage_debuff
 - id: mark_hunzhuoshuiyu
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: extend
+    destroyable: true
+    keepOnSwitchOut: true
+  # effect:
+  #    - effect_mark_double_stage_debuff
 - id: mark_judushenti
 - id: mark_yuansuzhufu
 - id: mark_xingzhili
