--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -864,6 +864,8 @@
   sureHit: true
   ignoreShield: false
   tags: []
+  effect:
+    - effect_skill_add_mark_foe_zhongdu_10_percent
 - id: skill_ducao
   element: Grass
   category: Status
